# smallsat-avionics

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
bsp/: .cproject  .project  bsp.launch
bsp/Inc/: FreeRTOSConfig.h  board.h
bsp/Inc/devices/: icm20948.h  ina228.h  tmp117.h
bsp/Inc/drivers/: clock.h  gpio.h  i2c.h  imu.h  reset.h  spi.h  systick.h  uart.h
bsp/Src/: main.c  main.cpp  syscalls.c
bsp/Src/app/: telemetry.c
bsp/Src/devices/: icm20948.c  ina228.c  tmp117.c
bsp/Src/drivers/: clock.c  fault.c  gpio.c  i2c.c  imu.c  reset.c  spi.c  systick.c  uart.c
cad/assemblies/: stack_assembly_v15.f3d  stack_assembly_v16.f3d  stack_assembly_v8.f3d
cad/assemblies/compute/: compute_assembly_v26.f3d  compute_assembly_v40.f3d
cad/assemblies/gimbal/: gimbal_assembly_v20.f3d
cad/assemblies/lower/: lower_assembly_v19.f3d
cad/hardware/inserts/: M2 4mm Heat-Set Inserts for Plastic_v2.f3d  M3 4mm Heat-Set Insert for Plastic_v2.f3d
cad/hardware/nuts/: M3 Steel Hex Nut_v2.f3d  M4 Steel Hex Nut_v2.f3d
cad/hardware/screws_bolts/: M2 6mm Steel Button Head Hex Drive Screw_v2.f3d  M3 16mm Steel Socket Head Screw_v2.f3d  M3 6mm Steel Button Head Hex Drive Screw_v2.f3d  M3 6mm Steel Socket Head Screw_v2.f3d  M4 25mm Steel Socket Head Screw_v2.f3d
cad/hardware/standoffs/: M3 15mm Nylon Male-Female Threaded Hex Standoff_v5.f3d  M3 20mm Nylon Male-Female Threaded Hex Standoff_v2.f3d
cad/lib/: protoboard_2x8_v11.f3d  protoboard_3x7_v2.f3d  protoboard_4x6_v2.f3d  protoboard_4x6_v4.f3d  protoboard_7x9_v1.f3d  protoboard_7x9_v8.f3d
cad/lib/headers/: female_header_2x19_v16.f3d
cad/printed/: bottom_plate_v154.f3d  buck_bar_v4.f3d  compute_plate_v60.f3d  compute_plate_v70.f3d  driver_bar_v3.f3d  driver_bar_v4.f3d  flywheel_v31.f3d  gimbal_plate_v159.f3d  mid_plate_v17.f3d
cad/reference/actuation/: GM4108H-120T.f3d  GM4108H-120T_v31.f3d  MB1419-G431CBU6-B05.f3d  MB1419-G431CBU6-B05_v2.f3d  MB1419-G431CBU6-B05_v3.f3d
cad/reference/comms/: CON-SMA-EDGE-S--3DModel-STEP-269445_v1.f3d  NRF24l01_with_antenna.f3d  NRF24l01_with_antenna_v1.f3d  RFM95W v5.f3d  RFM95W v5_v1.f3d
cad/reference/compute/: NUCLEO-F446RE--3DModel-STEP-56544.f3d  NUCLEO-F446RE--3DModel-STEP-56544_v5.f3d
cad/reference/indicators/: WS2812B--3DModel-STEP-55780.f3d  WS2812_LED_carrier.f3d
cad/reference/payload/: Arducam MINI OV2640_v1.f3d
cad/reference/power/: XT60FemaleConnector.f3d  XT60MaleConnector.f3d  battery_3S_LiPo_v1.f3d  buck_3v3_v1.f3d  (+3 more)
common/protocol/: frame.c  frame.cpp  frame.h  frame.hpp  msg.h  msg.hpp  state.h  state.hpp
docs/: architecture.md  bom.md  requirements.md  scenarios.md  setup.md  vv.md
docs/reports/: SIL-001.md  SIL-005.md  SIL-006.md  SIL-007.md  SIL-008.md
firmware/avionics_node_f446/: .cproject  .project  avionics_node_f446.launch
fsw/: CMakeLists.txt
fsw/hil/scenarios/: hil_001_timing.yaml  hil_002_link_loss.yaml
fsw/include/fsw/: executive.hpp  fault_manager.hpp  inputs.hpp  mode_manager.hpp  platform.hpp  sensor_monitor.hpp  types.hpp
fsw/include/fsw/comms/: command_handler.hpp  telemetry_producer.hpp
fsw/platform/host/: platform_host.cpp
fsw/platform/stm32/: platform_stm32.cpp
fsw/sil/: sil_shim.cpp
fsw/sil/scenarios/: sil_001_undervoltage.yaml  sil_002_illegal_command.yaml  sil_003_degraded_no_safe.yaml  sil_004_transient_debounce.yaml  sil_005_command_loss.yaml  sil_006_ground_recovery.yaml  sil_007_illegal_transition.yaml  sil_008_safe_wins_conflict.yaml
fsw/sil/timelines/: undervoltage.txt
fsw/src/: executive.cpp  fault_manager.cpp  mode_manager.cpp  sensor_monitor.cpp
fsw/src/comms/: command_handler.cpp  telemetry_producer.cpp
fsw/test/: test_comms.cpp  test_executive.cpp  test_fault_manager.cpp  test_main.cpp  test_mode_manager.cpp  test_protocol.cpp  test_sensor_monitor.cpp
hardware/: bom.md
tools/: frames.py  hil_runner.py  scope_shot.py  sil_runner.py  uart_monitor.py
tools/ground/: __init__.py  frames.py  runner.py
tools/tests/: test_frames.py  test_hil_runner.py  test_runner.py  test_sil_runner.py
(+37 files in other folders)
